# TspReader

./: .gitignore  CMakeLists.txt
include/: Content.h  Graph.h  Parser.h  Reader.h  TspReader.h
include/utils/: Numbers.h  Utils.h
src/: CMakeLists.txt  Graph.cpp
src/parsers/: DistanceFunctions.cpp  DistanceFunctions.h  GraphParser.cpp  GraphParser.h  Reader.cpp  SubParsers.cpp  SubParsers.h  Tags.cpp  Tags.h  TspReader.cpp  TspTags.cpp  TspTags.h
test/: CMakeLists.txt
test/src/parsers/: ParserTest.cpp  ReaderTest.cpp  SubParsersTest.cpp
